# percent

./: .gitignore  README.md  package.json  pnpm-lock.yaml
apps/client/: index.html  package.json  vite.config.ts
apps/client/src/: App.tsx  MainWindow.tsx  bubble.tsx  styles.css
apps/client/src-tauri/: Cargo.toml  tauri.conf.json
apps/client/src-tauri/capabilities/: default.json
apps/client/src-tauri/icons/: icon.icns
apps/client/src-tauri/src/: frontapp.rs  keyboard.rs  lib.rs  logger.rs  main.rs  permissions.rs  screenshotter.rs  window.rs
apps/server/: .env.example  .gitignore  package.json  prisma-auth.config.ts  prisma.config.ts
apps/server/prisma/: schema.prisma
apps/server/prisma-auth/: schema.prisma
apps/server/src/: index.ts  mastra.ts
apps/server/src/agents/: percentAgent.ts  screenAgent.ts
apps/server/src/auth/: db.ts  index.ts
apps/server/src/db/: client.ts  init.ts
apps/server/src/db/migrations/: 001_initial_schema.sql  002_tasks.sql
apps/server/src/lib/: appLogger.ts  chatClient.ts  chatMerge.ts  paths.ts  snowflake.ts  taskDetector.ts
apps/server/src/middleware/: responseGateway.ts
apps/server/src/routes/: agent.ts  analyze.ts  chat.ts  logs.ts  people.ts  suggest.ts  tasks.ts
