[package]
name = "percent-tracker"
version = "0.1.0"
description = "A global enter key tracker with floating bubble UI"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "percent_tracker_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
device_query = "2"
dotenvy = "0.15"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.5"
objc2-app-kit = "0.2"
objc2-foundation = "0.2"
core-graphics = "0.23"
core-foundation = "0.9"
